--- a/index.html
+++ b/index.html
@@ -2,50 +2,148 @@
 <html lang="en" data-theme="light">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Organic Store</title>
-    <!-- google fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
-        rel="stylesheet">
-    <!-- font awesome cdn -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
-        integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <!-- daisyui and tailwindcss cdn -->
-    <link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.10/dist/full.min.css" rel="stylesheet" type="text/css" />
-    <script src="https://cdn.tailwindcss.com"></script>
-    <script>
-        tailwind.config = {
-            theme: {
-                extend: {
-                    colors: {
-                        primary: 'rgb(139, 195, 74)',
-                        secondary: 'rgb(17, 17, 17)',
-                        body: 'rgb(248, 246, 243)',
-                        accent: 'rgb(106, 151, 57)',
-                        body_neutral: 'rgb(51, 51, 51)',
-                    },
-                    fontFamily: {
-                        Poppins: 'Poppins',
-                    },
-                    backgroundImage: {
-                        leaf: "url('./images/leaf01.png')",
-                        call_to_action: "url('./images/call.jpg')",
-                    },
-                },
-            },
-        }
-    </script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Organic Store</title>
+  <!-- google fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+    rel="stylesheet">
+  <!-- font awesome cdn -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+    integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <!-- daisyui and tailwindcss cdn -->
+  <link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.10/dist/full.min.css" rel="stylesheet" type="text/css" />
+  <script src="https://cdn.tailwindcss.com"></script>
+  <script>
+    tailwind.config = {
+      theme: {
+        extend: {
+          colors: {
+            primary: 'rgb(139, 195, 74)',
+            secondary: 'rgb(17, 17, 17)',
+            body: 'rgb(248, 246, 243)',
+            accent: 'rgb(106, 151, 57)',
+            body_neutral: 'rgb(51, 51, 51)',
+          },
+          fontFamily: {
+            Poppins: 'Poppins',
+          },
+          backgroundImage: {
+            leaf: "url('./images/leaf01.png')",
+            call_to_action: "url('./images/call.jpg')",
+          },
+        },
+      },
+    }
+  </script>
 </head>
 
-<body>
-    <header>
-        
-    </header>
+<body class="font-Poppins">
+  <!-- header section -->
+  <header>
+    <!-- navbar -->
+    <nav class="w-11/12 mx-auto">
+      <div class="navbar p-0 py-2">
+        <div class="navbar-start">
+          <a href="index.html" class="">
+            <img class="w-36" src="images/logo.svg" alt="">
+          </a>
+        </div>
+        <div class="navbar-center hidden lg:flex">
+          <ul class="menu menu-horizontal px-1 text-lg font-medium">
+            <li class="hover:text-primary transition-colors duration-300 ease-in-out"><a href="index.html">Home</a></li>
+            <li class="hover:text-primary transition-colors duration-300 ease-in-out"><a href="#">Everything</a></li>
+            <li class="hover:text-primary transition-colors duration-300 ease-in-out"><a href="#">Groceries</a></li>
+            <li class="hover:text-primary transition-colors duration-300 ease-in-out"><a href="#">About</a></li>
+            <li class="hover:text-primary transition-colors duration-300 ease-in-out"><a href="#">Contact</a></li>
+          </ul>
+        </div>
+        <div class="navbar-end">
+          <div class="flex items-center gap-5 text-lg">
+            <button class="text-accent font-semibold flex items-center gap-2">
+              <span>$10.00</span>
+              <i class="fa-solid fa-shopping-cart"></i>
+            </button>
+            <button>
+              <i class="fa-solid fa-user"></i>
+            </button>
+          </div>
+          <div class="dropdown">
+            <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
+              <i class="fa-solid fa-bars"></i>
+            </div>
+            <ul tabindex="0"
+              class="menu menu-sm dropdown-content bg-base-100 rounded-box z-[1] mt-3 w-52 p-2 shadow text-lg font-medium right-0 gap-5">
+              <li class="hover:text-primary transition-colors duration-300 ease-in-out"><a>Home</a></li>
+              <li class="hover:text-primary transition-colors duration-300 ease-in-out"><a>Everything</a></li>
+              <li class="hover:text-primary transition-colors duration-300 ease-in-out"><a>Groceries</a></li>
+              <li class="hover:text-primary transition-colors duration-300 ease-in-out"><a>About</a></li>
+              <li class="hover:text-primary transition-colors duration-300 ease-in-out"><a>Contact</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </nav>
+
+    <!-- banner section -->
+    <section class=" bg-leaf bg-no-repeat bg-right-bottom">
+      <div class="w-full h-full bg-body bg-opacity-90">
+        <div class="lg:w-9/12 mx-auto gap-16 py-28 flex sm:flex-row flex-col items-center">
+          <div class="flex-1">
+            <img src="images/bannerbg.png" alt="">
+          </div>
+          <div class="flex-1 sm:text-left text-center">
+            <h4 class="text-xl font-semibold my-5">Best Quality Products</h4>
+            <h1 class="lg:text-6xl text-4xl font-semibold leading-tight">Join The Organic Movement</h1>
+            <p class="my-5 text-lg">
+              Organic products are made without the use of synthetic pesticides, chemical fertilizers, and genetically
+              modified organisms.
+            </p>
+            <div class="flex sm:justify-start justify-center">
+              <button class="btn flex items-center px-10 text-white bg-accent hover:bg-primary">
+                <i class="fa-solid fa-shopping-cart"></i>
+                <span>Shop Now</span>
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+  </header>
+
+
+  <!-- card section -->
+  <section>
+
+  </section>
+
+
+  <!-- about us section -->
+  <section>
+
+  </section>
+
+
+  <!-- call to action section -->
+  <section>
+
+  </section>
+
+
+  <!-- products section -->
+  <section>
+
+  </section>
+
+
+  <!-- footer section -->
+  <footer>
+
+  </footer>
 </body>
 
 </html>
