--- a/index.html
+++ b/index.html
@@ -129,8 +129,23 @@
 
 
   <!-- call to action section -->
-  <section>
-
+  <section class="bg-call_to_action h-80 bg-no-repeat bg-cover bg-center relative">
+    <div class="absolute top-0 left-0 w-full h-full bg-secondary/35 flex justify-center items-center">
+      <div class="z-10 text-white">
+        <h3 class="text-5xl font-semibold text-center">
+          Insert A call to action
+        </h3>
+        <p class="text-xl w-2/3 mx-auto text-center my-5">
+          think of what you want your visitors to do next maybe they should
+          contact you?
+        </p>
+        <div class="flex justify-center">
+          <button class="btn bg-transparent hover:bg-primary hover:border-primary text-white border-white">
+            Get In Touch
+          </button>
+        </div>
+      </div>
+    </div>
   </section>
 
 
