--- a/index.html
+++ b/index.html
@@ -116,43 +116,257 @@
   </header>
 
 
-  <!-- card section -->
-  <section>
+  <main>
+    <!-- card section -->
+    <section>
 
-  </section>
-
-
-  <!-- about us section -->
-  <section>
-
-  </section>
+    </section>
 
 
-  <!-- call to action section -->
-  <section class="bg-call_to_action h-80 bg-no-repeat bg-cover bg-center relative">
-    <div class="absolute top-0 left-0 w-full h-full bg-secondary/35 flex justify-center items-center">
-      <div class="z-10 text-white">
-        <h3 class="text-5xl font-semibold text-center">
-          Insert A call to action
-        </h3>
-        <p class="text-xl w-2/3 mx-auto text-center my-5">
-          think of what you want your visitors to do next maybe they should
-          contact you?
-        </p>
-        <div class="flex justify-center">
-          <button class="btn bg-transparent hover:bg-primary hover:border-primary text-white border-white">
-            Get In Touch
-          </button>
+    <!-- about us section -->
+    <section>
+
+    </section>
+
+
+    <!-- call to action section -->
+    <section class="bg-call_to_action h-80 bg-no-repeat bg-cover bg-center relative">
+      <div class="absolute top-0 left-0 w-full h-full bg-secondary/35 flex justify-center items-center">
+        <div class="z-10 text-white">
+          <h3 class="text-5xl font-semibold text-center">
+            Insert A call to action
+          </h3>
+          <p class="text-xl w-2/3 mx-auto text-center my-5">
+            think of what you want your visitors to do next maybe they should
+            contact you?
+          </p>
+          <div class="flex justify-center">
+            <button class="btn bg-transparent hover:bg-primary hover:border-primary text-white border-white">
+              Get In Touch
+            </button>
+          </div>
         </div>
       </div>
-    </div>
-  </section>
+    </section>
 
 
-  <!-- products section -->
-  <section>
-
-  </section>
+    <!-- products section -->
+    <section class="bg-body py-18">
+      <div class="w-11/12 mx-auto">
+        <div class="flex flex-col items-center gap-2 my-10">
+          <img class="w-20" src="images/leaf01.png" alt="">
+          <h2 class="text-4xl font-semibold">Best Selling Products</h2>
+        </div>
+        <!-- card section -->
+        <div class="grid lg:grid-cols-4 md:grid-cols-2 grid-cols-1 gap-10 mb-10">
+          <!-- card-1 -->
+          <div class="card bg-base-100 w-full shadow rounded-md">
+            <figure class="px-10 pt-10">
+              <img src="images/product01.jpg" alt="Shoes"
+                class="rounded-xl" />
+            </figure>
+            <div class="card-body items-center text-center">
+              <h4 class="capitalize text-slate-400">Groceries</h4>
+              <h2 class="card-title capitalize text-body_neutral">Assorted Coffee</h2>
+              <p>
+              <i class="fa-solid fa-star text-yellow-400"></i>
+              <i class="fa-solid fa-star text-yellow-400"></i>
+              <i class="fa-solid fa-star text-yellow-400"></i>
+              <i class="fa-solid fa-star text-yellow-400"></i>
+              <i class="fa-regular fa-star text-yellow-400"></i>
+              </p>
+              <p class="text-lg font-medium">$35.00</p>
+              <div class="card-actions">
+                <button class="btn flex items-center px-10 text-white bg-accent hover:bg-primary">
+                  <span>Buy Now</span>
+                  <i class="fa-solid fa-shopping-cart"></i>
+                </button>
+              </div>
+            </div>
+          </div>
+          <!-- card-2 -->
+          <div class="card bg-base-100 w-full shadow rounded-md">
+            <figure class="px-10 pt-10">
+              <img src="images/product02.jpg" alt="Shoes"
+                class="rounded-xl" />
+            </figure>
+            <div class="card-body items-center text-center">
+              <h4 class="capitalize text-slate-400">Groceries</h4>
+              <h2 class="card-title capitalize text-body_neutral">Assorted Oil</h2>
+              <div class="rating">
+                <input type="radio" name="rating-2" class="mask mask-star-2 bg-yellow-400" />
+                <input
+                  type="radio"
+                  name="rating-2"
+                  class="mask mask-star-2 bg-yellow-400"
+                  checked="checked" />
+                <input type="radio" name="rating-2" class="mask mask-star-2 bg-yellow-400" />
+                <input type="radio" name="rating-2" class="mask mask-star-2 bg-yellow-400" />
+                <input type="radio" name="rating-2" class="mask mask-star-2 bg-yellow-400" />
+              </div>
+              <p class="text-lg font-medium">$35.00</p>
+              <div class="card-actions">
+                <button class="btn flex items-center px-10 text-white bg-accent hover:bg-primary">
+                  <span>Buy Now</span>
+                  <i class="fa-solid fa-shopping-cart"></i>
+                </button>
+              </div>
+            </div>
+          </div>
+          <!-- card-3 -->
+          <div class="card bg-base-100 w-full shadow rounded-md">
+            <figure class="px-10 pt-10">
+              <img src="images/product03.jpg" alt="Shoes"
+                class="rounded-xl" />
+            </figure>
+            <div class="card-body items-center text-center">
+              <h4 class="capitalize text-slate-400">Groceries</h4>
+              <h2 class="card-title capitalize text-body_neutral">Assorted Coffee</h2>
+              <p>
+              <i class="fa-solid fa-star text-yellow-400"></i>
+              <i class="fa-solid fa-star text-yellow-400"></i>
+              <i class="fa-solid fa-star text-yellow-400"></i>
+              <i class="fa-solid fa-star text-yellow-400"></i>
+              <i class="fa-solid fa-star text-yellow-400"></i>
+              </p>
+              <p class="text-lg font-medium">$35.00</p>
+              <div class="card-actions">
+                <button class="btn flex items-center px-10 text-white bg-accent hover:bg-primary">
+                  <span>Buy Now</span>
+                  <i class="fa-solid fa-shopping-cart"></i>
+                </button>
+              </div>
+            </div>
+          </div>
+          <!-- card-4 -->
+          <div class="card bg-base-100 w-full shadow rounded-md">
+            <figure class="px-10 pt-10">
+              <img src="images/product04.jpg" alt="Shoes"
+                class="rounded-xl" />
+            </figure>
+            <div class="card-body items-center text-center">
+              <h4 class="capitalize text-slate-400">Groceries</h4>
+              <h2 class="card-title capitalize text-body_neutral">Assorted Coffee</h2>
+              <p>
+              <i class="fa-solid fa-star text-yellow-400"></i>
+              <i class="fa-solid fa-star text-yellow-400"></i>
+              <i class="fa-solid fa-star text-yellow-400"></i>
+              <i class="fa-solid fa-star text-yellow-400"></i>
+              <i class="fa-solid fa-star text-yellow-400"></i>
+              </p>
+              <p class="text-lg font-medium">$35.00</p>
+              <div class="card-actions">
+                <button class="btn flex items-center px-10 text-white bg-accent hover:bg-primary">
+                  <span>Buy Now</span>
+                  <i class="fa-solid fa-shopping-cart"></i>
+                </button>
+              </div>
+            </div>
+          </div>
+          <!-- card-5 -->
+          <div class="card bg-base-100 w-full shadow rounded-md">
+            <figure class="px-10 pt-10">
+              <img src="images/product05.jpg" alt="Shoes"
+                class="rounded-xl" />
+            </figure>
+            <div class="card-body items-center text-center">
+              <h4 class="capitalize text-slate-400">Groceries</h4>
+              <h2 class="card-title capitalize text-body_neutral">Assorted Spices</h2>
+              <p>
+              <i class="fa-solid fa-star text-yellow-400"></i>
+              <i class="fa-solid fa-star text-yellow-400"></i>
+              <i class="fa-solid fa-star text-yellow-400"></i>
+              <i class="fa-solid fa-star text-yellow-400"></i>
+              <i class="fa-solid fa-star text-yellow-400"></i>
+              </p>
+              <p class="text-lg font-medium">$35.00</p>
+              <div class="card-actions">
+                <button class="btn flex items-center px-10 text-white bg-accent hover:bg-primary">
+                  <span>Buy Now</span>
+                  <i class="fa-solid fa-shopping-cart"></i>
+                </button>
+              </div>
+            </div>
+          </div>
+          <!-- card-6 -->
+          <div class="card bg-base-100 w-full shadow rounded-md">
+            <figure class="px-10 pt-10">
+              <img src="images/product06.jpg" alt="Shoes"
+                class="rounded-xl" />
+            </figure>
+            <div class="card-body items-center text-center">
+              <h4 class="capitalize text-slate-400">Groceries</h4>
+              <h2 class="card-title capitalize text-body_neutral">Assorted Coffee</h2>
+              <p>
+              <i class="fa-solid fa-star text-yellow-400"></i>
+              <i class="fa-solid fa-star text-yellow-400"></i>
+              <i class="fa-solid fa-star text-yellow-400"></i>
+              <i class="fa-solid fa-star text-yellow-400"></i>
+              <i class="fa-solid fa-star text-yellow-400"></i>
+              </p>
+              <p class="text-lg font-medium">$35.00</p>
+              <div class="card-actions">
+                <button class="btn flex items-center px-10 text-white bg-accent hover:bg-primary">
+                  <span>Buy Now</span>
+                  <i class="fa-solid fa-shopping-cart"></i>
+                </button>
+              </div>
+            </div>
+          </div>
+          <!-- card-7 -->
+          <div class="card bg-base-100 w-full shadow rounded-md">
+            <figure class="px-10 pt-10">
+              <img src="images/product07.jpg" alt="Shoes"
+                class="rounded-xl" />
+            </figure>
+            <div class="card-body items-center text-center">
+              <h4 class="capitalize text-slate-400">Groceries</h4>
+              <h2 class="card-title capitalize text-body_neutral">Assorted Coffee</h2>
+              <p>
+              <i class="fa-solid fa-star text-yellow-400"></i>
+              <i class="fa-solid fa-star text-yellow-400"></i>
+              <i class="fa-solid fa-star text-yellow-400"></i>
+              <i class="fa-solid fa-star text-yellow-400"></i>
+              <i class="fa-solid fa-star text-yellow-400"></i>
+              </p>
+              <p class="text-lg font-medium">$35.00</p>
+              <div class="card-actions">
+                <button class="btn flex items-center px-10 text-white bg-accent hover:bg-primary">
+                  <span>Buy Now</span>
+                  <i class="fa-solid fa-shopping-cart"></i>
+                </button>
+              </div>
+            </div>
+          </div>
+          <!-- card-8 -->
+          <div class="card bg-base-100 w-full shadow rounded-md">
+            <figure class="px-10 pt-10">
+              <img src="images/product08.jpg" alt="Shoes"
+                class="rounded-xl" />
+            </figure>
+            <div class="card-body items-center text-center">
+              <h4 class="capitalize text-slate-400">Groceries</h4>
+              <h2 class="card-title capitalize text-body_neutral">Assorted Coffee</h2>
+              <p>
+              <i class="fa-solid fa-star text-yellow-400"></i>
+              <i class="fa-solid fa-star text-yellow-400"></i>
+              <i class="fa-solid fa-star text-yellow-400"></i>
+              <i class="fa-solid fa-star text-yellow-400"></i>
+              <i class="fa-solid fa-star text-yellow-400"></i>
+              </p>
+              <p class="text-lg font-medium">$35.00</p>
+              <div class="card-actions">
+                <button class="btn flex items-center px-10 text-white bg-accent hover:bg-primary">
+                  <span>Buy Now</span>
+                  <i class="fa-solid fa-shopping-cart"></i>
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+  </main>
 
 
   <!-- footer section -->
