--- a/index.html
+++ b/index.html
@@ -162,18 +162,17 @@
           <!-- card-1 -->
           <div class="card bg-base-100 w-full shadow rounded-md">
             <figure class="px-10 pt-10">
-              <img src="images/product01.jpg" alt="Shoes"
-                class="rounded-xl" />
+              <img src="images/product01.jpg" alt="Shoes" class="rounded-xl" />
             </figure>
             <div class="card-body items-center text-center">
               <h4 class="capitalize text-slate-400">Groceries</h4>
               <h2 class="card-title capitalize text-body_neutral">Assorted Coffee</h2>
               <p>
-              <i class="fa-solid fa-star text-yellow-400"></i>
-              <i class="fa-solid fa-star text-yellow-400"></i>
-              <i class="fa-solid fa-star text-yellow-400"></i>
-              <i class="fa-solid fa-star text-yellow-400"></i>
-              <i class="fa-regular fa-star text-yellow-400"></i>
+                <i class="fa-solid fa-star text-yellow-400"></i>
+                <i class="fa-solid fa-star text-yellow-400"></i>
+                <i class="fa-solid fa-star text-yellow-400"></i>
+                <i class="fa-solid fa-star text-yellow-400"></i>
+                <i class="fa-regular fa-star text-yellow-400"></i>
               </p>
               <p class="text-lg font-medium">$35.00</p>
               <div class="card-actions">
@@ -187,19 +186,14 @@
           <!-- card-2 -->
           <div class="card bg-base-100 w-full shadow rounded-md">
             <figure class="px-10 pt-10">
-              <img src="images/product02.jpg" alt="Shoes"
-                class="rounded-xl" />
+              <img src="images/product02.jpg" alt="Shoes" class="rounded-xl" />
             </figure>
             <div class="card-body items-center text-center">
               <h4 class="capitalize text-slate-400">Groceries</h4>
               <h2 class="card-title capitalize text-body_neutral">Assorted Oil</h2>
               <div class="rating">
                 <input type="radio" name="rating-2" class="mask mask-star-2 bg-yellow-400" />
-                <input
-                  type="radio"
-                  name="rating-2"
-                  class="mask mask-star-2 bg-yellow-400"
-                  checked="checked" />
+                <input type="radio" name="rating-2" class="mask mask-star-2 bg-yellow-400" checked="checked" />
                 <input type="radio" name="rating-2" class="mask mask-star-2 bg-yellow-400" />
                 <input type="radio" name="rating-2" class="mask mask-star-2 bg-yellow-400" />
                 <input type="radio" name="rating-2" class="mask mask-star-2 bg-yellow-400" />
@@ -216,18 +210,17 @@
           <!-- card-3 -->
           <div class="card bg-base-100 w-full shadow rounded-md">
             <figure class="px-10 pt-10">
-              <img src="images/product03.jpg" alt="Shoes"
-                class="rounded-xl" />
+              <img src="images/product03.jpg" alt="Shoes" class="rounded-xl" />
             </figure>
             <div class="card-body items-center text-center">
               <h4 class="capitalize text-slate-400">Groceries</h4>
               <h2 class="card-title capitalize text-body_neutral">Assorted Coffee</h2>
               <p>
-              <i class="fa-solid fa-star text-yellow-400"></i>
-              <i class="fa-solid fa-star text-yellow-400"></i>
-              <i class="fa-solid fa-star text-yellow-400"></i>
-              <i class="fa-solid fa-star text-yellow-400"></i>
-              <i class="fa-solid fa-star text-yellow-400"></i>
+                <i class="fa-solid fa-star text-yellow-400"></i>
+                <i class="fa-solid fa-star text-yellow-400"></i>
+                <i class="fa-solid fa-star text-yellow-400"></i>
+                <i class="fa-solid fa-star text-yellow-400"></i>
+                <i class="fa-solid fa-star text-yellow-400"></i>
               </p>
               <p class="text-lg font-medium">$35.00</p>
               <div class="card-actions">
@@ -241,18 +234,17 @@
           <!-- card-4 -->
           <div class="card bg-base-100 w-full shadow rounded-md">
             <figure class="px-10 pt-10">
-              <img src="images/product04.jpg" alt="Shoes"
-                class="rounded-xl" />
+              <img src="images/product04.jpg" alt="Shoes" class="rounded-xl" />
             </figure>
             <div class="card-body items-center text-center">
               <h4 class="capitalize text-slate-400">Groceries</h4>
               <h2 class="card-title capitalize text-body_neutral">Assorted Coffee</h2>
               <p>
-              <i class="fa-solid fa-star text-yellow-400"></i>
-              <i class="fa-solid fa-star text-yellow-400"></i>
-              <i class="fa-solid fa-star text-yellow-400"></i>
-              <i class="fa-solid fa-star text-yellow-400"></i>
-              <i class="fa-solid fa-star text-yellow-400"></i>
+                <i class="fa-solid fa-star text-yellow-400"></i>
+                <i class="fa-solid fa-star text-yellow-400"></i>
+                <i class="fa-solid fa-star text-yellow-400"></i>
+                <i class="fa-solid fa-star text-yellow-400"></i>
+                <i class="fa-solid fa-star text-yellow-400"></i>
               </p>
               <p class="text-lg font-medium">$35.00</p>
               <div class="card-actions">
@@ -266,18 +258,17 @@
           <!-- card-5 -->
           <div class="card bg-base-100 w-full shadow rounded-md">
             <figure class="px-10 pt-10">
-              <img src="images/product05.jpg" alt="Shoes"
-                class="rounded-xl" />
+              <img src="images/product05.jpg" alt="Shoes" class="rounded-xl" />
             </figure>
             <div class="card-body items-center text-center">
               <h4 class="capitalize text-slate-400">Groceries</h4>
               <h2 class="card-title capitalize text-body_neutral">Assorted Spices</h2>
               <p>
-              <i class="fa-solid fa-star text-yellow-400"></i>
-              <i class="fa-solid fa-star text-yellow-400"></i>
-              <i class="fa-solid fa-star text-yellow-400"></i>
-              <i class="fa-solid fa-star text-yellow-400"></i>
-              <i class="fa-solid fa-star text-yellow-400"></i>
+                <i class="fa-solid fa-star text-yellow-400"></i>
+                <i class="fa-solid fa-star text-yellow-400"></i>
+                <i class="fa-solid fa-star text-yellow-400"></i>
+                <i class="fa-solid fa-star text-yellow-400"></i>
+                <i class="fa-solid fa-star text-yellow-400"></i>
               </p>
               <p class="text-lg font-medium">$35.00</p>
               <div class="card-actions">
@@ -291,18 +282,17 @@
           <!-- card-6 -->
           <div class="card bg-base-100 w-full shadow rounded-md">
             <figure class="px-10 pt-10">
-              <img src="images/product06.jpg" alt="Shoes"
-                class="rounded-xl" />
+              <img src="images/product06.jpg" alt="Shoes" class="rounded-xl" />
             </figure>
             <div class="card-body items-center text-center">
               <h4 class="capitalize text-slate-400">Groceries</h4>
               <h2 class="card-title capitalize text-body_neutral">Assorted Coffee</h2>
               <p>
-              <i class="fa-solid fa-star text-yellow-400"></i>
-              <i class="fa-solid fa-star text-yellow-400"></i>
-              <i class="fa-solid fa-star text-yellow-400"></i>
-              <i class="fa-solid fa-star text-yellow-400"></i>
-              <i class="fa-solid fa-star text-yellow-400"></i>
+                <i class="fa-solid fa-star text-yellow-400"></i>
+                <i class="fa-solid fa-star text-yellow-400"></i>
+                <i class="fa-solid fa-star text-yellow-400"></i>
+                <i class="fa-solid fa-star text-yellow-400"></i>
+                <i class="fa-solid fa-star text-yellow-400"></i>
               </p>
               <p class="text-lg font-medium">$35.00</p>
               <div class="card-actions">
@@ -316,18 +306,17 @@
           <!-- card-7 -->
           <div class="card bg-base-100 w-full shadow rounded-md">
             <figure class="px-10 pt-10">
-              <img src="images/product07.jpg" alt="Shoes"
-                class="rounded-xl" />
+              <img src="images/product07.jpg" alt="Shoes" class="rounded-xl" />
             </figure>
             <div class="card-body items-center text-center">
               <h4 class="capitalize text-slate-400">Groceries</h4>
               <h2 class="card-title capitalize text-body_neutral">Assorted Coffee</h2>
               <p>
-              <i class="fa-solid fa-star text-yellow-400"></i>
-              <i class="fa-solid fa-star text-yellow-400"></i>
-              <i class="fa-solid fa-star text-yellow-400"></i>
-              <i class="fa-solid fa-star text-yellow-400"></i>
-              <i class="fa-solid fa-star text-yellow-400"></i>
+                <i class="fa-solid fa-star text-yellow-400"></i>
+                <i class="fa-solid fa-star text-yellow-400"></i>
+                <i class="fa-solid fa-star text-yellow-400"></i>
+                <i class="fa-solid fa-star text-yellow-400"></i>
+                <i class="fa-solid fa-star text-yellow-400"></i>
               </p>
               <p class="text-lg font-medium">$35.00</p>
               <div class="card-actions">
@@ -341,18 +330,17 @@
           <!-- card-8 -->
           <div class="card bg-base-100 w-full shadow rounded-md">
             <figure class="px-10 pt-10">
-              <img src="images/product08.jpg" alt="Shoes"
-                class="rounded-xl" />
+              <img src="images/product08.jpg" alt="Shoes" class="rounded-xl" />
             </figure>
             <div class="card-body items-center text-center">
               <h4 class="capitalize text-slate-400">Groceries</h4>
               <h2 class="card-title capitalize text-body_neutral">Assorted Coffee</h2>
               <p>
-              <i class="fa-solid fa-star text-yellow-400"></i>
-              <i class="fa-solid fa-star text-yellow-400"></i>
-              <i class="fa-solid fa-star text-yellow-400"></i>
-              <i class="fa-solid fa-star text-yellow-400"></i>
-              <i class="fa-solid fa-star text-yellow-400"></i>
+                <i class="fa-solid fa-star text-yellow-400"></i>
+                <i class="fa-solid fa-star text-yellow-400"></i>
+                <i class="fa-solid fa-star text-yellow-400"></i>
+                <i class="fa-solid fa-star text-yellow-400"></i>
+                <i class="fa-solid fa-star text-yellow-400"></i>
               </p>
               <p class="text-lg font-medium">$35.00</p>
               <div class="card-actions">
@@ -366,12 +354,52 @@
         </div>
       </div>
     </section>
+
+
+    <!-- featured brands section -->
+    <section class="flex lg:flex-row flex-col bg-white justify-center items-center py-10 bg-body">
+      <h2 class="text-2xl font-semibold">Featured Brands:</h2>
+      <div class="flex lg:flex-nowrap flex-wrap justify-center items-center">
+        <img src="./images/logo-1.svg" alt="logo" />
+        <img src="./images/logo-2.svg" alt="logo" />
+        <img src="./images/logo-3.svg" alt="logo" />
+        <img src="./images/logo-4.svg" alt="logo" />
+        <img src="./images/logo-5.svg" alt="logo" />
+      </div>
+    </section>
   </main>
 
 
   <!-- footer section -->
-  <footer>
-
+  <footer class="bg-secondary text-white py-20">
+    <div class="footer w-11/12 mx-auto">
+      <aside>
+        <img src="images/logo-white.png" alt="">
+        <p>
+          Providing Organic Food since 2000. <br>We aim to provide the best quality products for our customers.
+        </p>
+      </aside>
+      <nav>
+        <h6 class="footer-title">Services</h6>
+        <a class="link link-hover">Branding</a>
+        <a class="link link-hover">Design</a>
+        <a class="link link-hover">Marketing</a>
+        <a class="link link-hover">Advertisement</a>
+      </nav>
+      <nav>
+        <h6 class="footer-title">Company</h6>
+        <a class="link link-hover">About us</a>
+        <a class="link link-hover">Contact</a>
+        <a class="link link-hover">Jobs</a>
+        <a class="link link-hover">Press kit</a>
+      </nav>
+      <nav>
+        <h6 class="footer-title">Legal</h6>
+        <a class="link link-hover">Terms of use</a>
+        <a class="link link-hover">Privacy policy</a>
+        <a class="link link-hover">Cookie policy</a>
+      </nav>
+    </div>
   </footer>
 </body>
 
